# docs/swagger.yaml
@@ -101,6 +101,17 @@ definitions:
       startYear:
         type: integer
     type: object
+  models.FilterProject:
+    properties:
+      filter:
+        items:
+          type: integer
+        type: array
+      keyword:
+        type: string
+      sort:
+        type: string
+    type: object
   models.GetUserProjectResponse:
     properties:
       description:
@@ -1095,10 +1106,17 @@ paths:
         in: query
         name: sort
         type: string
-      - description: Filter Skills
-        in: query
-        name: filter
+      - in: query
+        name: keyword
         type: string
+      - in: query
+        name: sort
+        type: string
+      - in: query
+        items:
+          type: integer
+        name: filter
+        type: array
       produces:
       - application/json
       responses:
